--- a/templates/experience.html
+++ b/templates/experience.html
@@ -3,8 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+   <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+   <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-欢迎进入资历页面
+    <div style="position: relative;top:10px;" align="center">
+        <button type="button" class="btn btn-primary">首页</button>
+        <button type="button" class="btn btn-success">奇遇查询</button>
+        <button type="button" class="btn btn-info">资历榜单</button>
+        <button type="button" class="btn btn-warning">宠物攻略</button>
+        <button type="button" class="btn btn-danger">茶馆闲坐</button>
+    </div>
+
+    <p align="center" style="position:relative;font-size:30px; top:10px;">欢迎进入资历页面</p>
+    <table class="table">
+        <tr align="center">
+          <td class="active">id</td>
+          <td class="success">阵营</td>
+          <td class="warning">门派</td>
+          <td class="danger">阵营</td>
+          <td class="info">大区</td>
+            <td class="active">资历</td>
+        </tr>
+        <tr align="center">
+          <td class="active">...</td>
+          <td class="success">...</td>
+          <td class="warning">...</td>
+          <td class="danger">...</td>
+          <td class="info">...</td>
+            <td class="active">...</td>
+        </tr>
+        <tr>
+          <td class="active">...</td>
+          <td class="success">...</td>
+          <td class="warning">...</td>
+          <td class="danger">...</td>
+          <td class="info">...</td>
+            <td class="active">...</td>
+        </tr>
+    </table>
+
+    <div align="center" style="position: absolute; bottom:0; left:45%">
+        <address>
+          <strong>双线一区--念破</strong><br>
+          <abbr title="Phone">QQ:</abbr> 1186921650
+        </address>
+
+        <address>
+          <strong>
+          偷塔李天王</strong><br>
+          <a href="mailto:#">cuit2017@163.com</a>
+        </address>
+    </div>
 </body>
 </html>
