调整显示效果

--- a/templates/experience.html
+++ b/templates/experience.html
@@ -48,7 +48,7 @@
         {% endfor %}
     </table>
 
-    <div align="center" style="position: absolute" >
+    <div style="position: fixed" >
         <address>
           <strong>双线一区--念破</strong><br>
           <abbr title="Phone">QQ:</abbr> 1186921650
