--- a/templates/experience.html
+++ b/templates/experience.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     {% load static %}
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="{% static 'static/css/bootstrap.min.css' %}">-->
    <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
         body{
             background: #F3F3FA;
+            background-image:url("/home/yuancy/static/01.jpg");
         }
 
     </style>
