--- a/templates/experience.html
+++ b/templates/experience.html
@@ -5,20 +5,43 @@
     {% load static %}
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!--<link rel="stylesheet" href="{% static 'static/css/bootstrap.min.css' %}">-->
-   <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-   <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <style>
-        body{
-            background: #F3F3FA;
-            background-image:url("/home/yuancy/static/01.jpg");
-        }
+    <!--<link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">-->
 
+    <link rel="stylesheet" href="{% static 'css/expreience.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/background.js' %}"></script>
+    <script src="{% static 'js/background.min.js' %}"></script>
+
+    <style>
+    body{
+        background: #F3F3FA;
+        background-image:url("{% static 'image/05.jpg' %}");
+    }
+    #background {
+		position: fixed;
+		top: 0;
+		left: 0;
+        opacity:0.5;
+		z-index: -100;
+	}
+	.pagination{
+        font-size:16px;
+        position: absolute;
+        left:15%;
+        height:50px;
+        width: 70%;
+        text-align:center;
+        top: 1724px;
+        line-height:50px;
+        opacity:0.6;
+        background:white;
+    }
     </style>
 </head>
 <body>
-
+    <canvas id="background"></canvas>
     <div style="position: relative;top:30px;" align="center">
         <button type="button" class="btn btn-primary">首页</button>
         <button type="button" class="btn btn-success">奇遇查询</button>
@@ -27,8 +50,9 @@
         <button type="button" class="btn btn-danger">茶馆闲坐</button>
     </div>
 
-    <p align="center" style="position:relative;font-size:30px; top:65px;">资历榜单</p>
-    <table class="table" style="position:relative; top:120px; width: 70%" align="center">
+    <p align="center" style="position:relative;font-size:30px; top:65px;">资 历 榜 单</p>
+    <p align="center" style="position:relative;font-size:15px; top:65px;">(2018.11)</p>
+    <table class="table" style="position:relative; top:100px; width: 70%;opacity:0.75;" align="center">
         <tr align="center" style="color:red;">
             <td class="info">排名</td>
           <td class="active">角色名</td>
@@ -50,6 +74,24 @@
         </tr>
         {% endfor %}
     </table>
+
+    <div class="pagination">
+    <span class="step-links">
+        {% if list.has_previous %}
+            <a href="?page=1">&laquo; 首页</a>
+            <a href="?page={{ contacts.previous_page_number }}">上一页</a>
+        {% endif %}
+
+        <span class="current">
+             {{ list.number }} / {{ list.paginator.num_pages }}
+        </span>
+
+        {% if list.has_next %}
+            <a href="?page={{ list.next_page_number }}">下一页</a>
+            <a href="?page={{ list.paginator.num_pages }}">尾页 &raquo;</a>
+        {% endif %}
+    </span>
+</div>
 
     <div style="position: fixed" >
         <address>
