--- a/templates/experience.html
+++ b/templates/experience.html
@@ -1,54 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+{% extends 'base_main.html' %}
 
-    {% load static %}
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <!--<link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">-->
 
-    <link rel="stylesheet" href="{% static 'css/expreience.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="{% static 'js/background.js' %}"></script>
-    <script src="{% static 'js/background.min.js' %}"></script>
+{% block css %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/expreience.css' %}">
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
-    <style>
-    body{
-        background: #F3F3FA;
-        background-image:url("{% static 'image/05.jpg' %}");
-    }
-    #background {
-		position: fixed;
-		top: 0;
-		left: 0;
-        opacity:0.5;
-		z-index: -100;
-	}
-	.pagination{
-        font-size:16px;
-        position: absolute;
-        left:15%;
-        height:50px;
-        width: 70%;
-        text-align:center;
-        top: 1724px;
-        line-height:50px;
-        opacity:0.6;
-        background:white;
-    }
-    </style>
-</head>
-<body>
-    <canvas id="background"></canvas>
-    <div style="position: relative;top:30px;" align="center">
-        <button type="button" class="btn btn-primary">首页</button>
-        <button type="button" class="btn btn-success">奇遇查询</button>
-        <button type="button" class="btn btn-info">资历榜单</button>
-        <button type="button" class="btn btn-warning">宠物攻略</button>
-        <button type="button" class="btn btn-danger">茶馆闲坐</button>
-    </div>
+<style>
+body{
+    background: #F3F3FA;
+    background-image:url("{% static 'image/05.jpg' %}");
+}
+#background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity:0.5;
+    z-index: -100;
+}
+.pagination{
+    font-size:16px;
+    position: absolute;
+    left:15%;
+    height:50px;
+    width: 70%;
+    text-align:center;
+    top: 1724px;
+    line-height:50px;
+    opacity:0.6;
+    background:white;
+}
+</style>
+{% endblock %}
+
+{% block content %}
+<canvas id="background"></canvas>
 
     <p align="center" style="position:relative;font-size:30px; top:65px;">资 历 榜 单</p>
     <p align="center" style="position:relative;font-size:15px; top:65px;">(2018.11)</p>
@@ -91,19 +77,5 @@
             <a href="?page={{ list.paginator.num_pages }}">尾页 &raquo;</a>
         {% endif %}
     </span>
-</div>
-
-    <div style="position: fixed" >
-        <address>
-          <strong>双线一区--念破</strong><br>
-          <abbr title="Phone">QQ:</abbr> 1186921650
-        </address>
-
-        <address>
-          <strong>
-          偷塔李天王</strong><br>
-          <a href="mailto:#">cuit2017@163.com</a>
-        </address>
     </div>
-</body>
-</html>
+{% endblock %}
