--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<form action="" method="post">
-    大区：<input type="text" name="username" placeholder="">
-    服务器：<input type="password" name="password" placeholder="">
-    奇遇类型：<input type="email" name="qiyu_unit" placeholder="">
-    奇遇：<input type="text" name="qiyu" placeholder="">
-    玩家id：<input type="text" name="userid" placeholder="">
-    <input type="submit" value="查询">
-</form>
-</body>
-</html>
+{% extends 'base_main.html' %}
+{% block title %}
+    偷塔李天王
+{% endblock %}
+
+{% block content %}
+    <h1 style="position:relative; top:300px;left:400px;">这是一个大写的首页</h1>
+{% endblock %}
